# spoilers

./: .gitignore  Cargo.toml  README.md  Rocket.toml
examples/json_events/: Cargo.toml
examples/json_events/migrations/0001_create_events/: up.sql
examples/json_events/src/: main.rs
examples/redshift/: Cargo.toml  Dockerfile  docker-compose.yml
examples/redshift/migrations/1_create_messages/: down.sql  up.sql
examples/redshift/src/: main.rs
spoilers_derive/: Cargo.toml
spoilers_derive/src/: lib.rs  resource.rs  storage.rs  utils.rs
src/: lib.rs  main.rs  models.rs  storage.rs
