[package]
name = "spoilers"
version = "0.1.0"
authors = ["Gabriela Surita <gabsurita@gmail.com>"]

[dependencies]
postgres = "*"
r2d2 = "*"
r2d2_postgres = "*"
rocket = {git = "https://github.com/SergioBenitez/Rocket"}
rocket_contrib = {git = "https://github.com/SergioBenitez/Rocket"}
rocket_codegen = {git = "https://github.com/SergioBenitez/Rocket"}
serde = "*"
serde_json = "*"
serde_derive = "*"
