[package]
name = "json_events"
version = "0.1.0"
authors = ["Gabriela Surita <gabsurita@gmail.com>"]

[dependencies]
chrono = { version="*", features = ["serde"] }
diesel = { version="*", features = ["postgres", "serde_json", "chrono"] }
diesel_infer_schema = { version="*", features = ["postgres"] }
diesel_codegen = { version="*", features = ["postgres"] }
r2d2-diesel = "*"
r2d2 = "*"
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
serde = "*"
serde_derive = "*"
serde_json = "*"
spoilers = { path = "../../" }
spoilers_derive = { path = "../../spoilers_derive" }
