[package]
name = "redshift_events"
version = "0.1.0"
authors = ["Gabriela Surita <gabsurita@gmail.com>"]

[dependencies]
chrono = { version="*", features = ["serde"] }
csv = "1.0.0-beta.5"
diesel = { version="*", features = ["postgres", "serde_json", "chrono"] }
diesel_infer_schema = { version="*", features = ["postgres"] }
diesel_codegen = { version="*", features = ["postgres"] }
hyper = "*"
postgres = "*"
r2d2 = "*"
r2d2-diesel = "*"
r2d2_postgres = "*"
redis = "*"
rusoto_core = "*"
rusoto_s3 = "*"
rusoto_credential = "*"
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
serde = "*"
serde_derive = "*"
serde_json = "*"
spoilers = { path = "../../" }
spoilers_derive = { path = "../../spoilers_derive" }
